--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "puppeteer": "^5.5.0"
-  },
-  "devDependencies": {}
+    "puppeteer": "^5.5.0",
+    "qrcode-terminal": "^0.12.0",
+    "whatsapp-web.js": "^1.18.0"
+  }
 }
